--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vertice</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/d5ea0dfb99.js" crossorigin="anonymous"></script>
 
+
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg " style="height: 10vh;">
+        <div class="container  " style="height: 100%;">  
+            <div style="width: 20%;" id="brand" class=" h-100">
+                <a class="navbar-brand   h-100 d-flex justify-content-start align-items-center" style="">
+                    <img src="./Img/logoNav.png" width="180" height="80" alt="">
+                </a>
+            </div>
+            <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#itens" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+            
+            <div style="width: 40%" id="espaco" class=" d-flex justify-content-end h-100">
+                <!-- div de espaçamento na NAV -->
+            </div>
+            <div style="width: 40%;" id="navigation" class=" h-100 d-flex justify-content-end">
+            <div class="collapse navbar-collapse w-100   " id="itens">
+                <ul class="navbar-nav   text-uppercase">
+                  <li class="nav-item">
+                    <a class="nav-link me-3 " aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item me-3">
+                    <a class="nav-link " aria-current="page" href="#">Projetos</a>
+                  </li>
+                  <li class="nav-item me-3">
+                    <a class="nav-link " aria-current="page" href="#">Quem Somos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link px-4 text-white " style="background-color: black; box-shadow: 3px 3px 3px 0px black;" aria-current="page" href="#">Contato</a>
+                  </li>
+      
+                </ul>
+              </div>
+            </div>
+            </div>
+        </div>
+    </nav>
+    <section id="principal" class="border d-flex flex-column justify-content-center align-items-center w-100 m-0" style="height: 300vh;">
+            <div class="container border d-flex justify-content-center align-items-center flex-column border-primary" style="height: 30%;">
+                <div class="border row m-0 h-50 w-100">
+                    <div class="col-md-6 border d-flex align-items-center" style="justify-content: flex-start;">
+                        <article id="slogan" class="d-flex align-items-center" style="margin-left: 10%;justify-content: flex-start; background-color: rgba(0,0,0,.1); width: 90%; height: 70%;">
+                                <span class="ms-3 display-2">Ligando o Mundo a Você</span>
+                        </article>
+                    </div>
+                    <div id="arte" class="col-md-6 border d-flex justify-content-end align-items-center">
+                        <figure class="border rounded-circle  " style="width: 40%; height: 70%; background-color: rgba(0,0,0,.1); margin-right: 15%;"></figure>
+                    </div>
+                </div>
+                <div class="border h-50 w-100"></div>
+            </div>
+            <div class="container border border-danger" style="height: 70%;"></div>
+    </section>
+    <footer class="w-100 border border-primary " style="height: 100px;"></footer>
+
+    <link rel="stylesheet" href="./CSS/style.css">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+</body>
+
+</html>
